k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burstops-backend
  namespace: burstops
  labels:
    app: burstops-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: burstops-backend
  template:
    metadata:
      labels:
        app: burstops-backend
        burstops-namespace: burstops
    spec:
      containers:
        - name: backend
          image: acrburstopsga3cvf.azurecr.io/burstops-backend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: "1000m"
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
