k8s/locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burstops-locust
  namespace: burstops-system
  labels:
    app: burstops-locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burstops-locust
  template:
    metadata:
      labels:
        app: burstops-locust
    spec:
      containers:
        - name: locust
          image: locustio/locust:latest
          command:
            - "locust"
          args:
            - "-f"
            - "/mnt/locust/locustfile.py"
            - "--host"
            - "http://burstops-gateway.burstops-system.svc.cluster.local:8080"
            - "--web-host"
            - "0.0.0.0"
            - "--web-port"
            - "8089"
            - "--web-base-path"
            - "/locust"
          ports:
            - containerPort: 8089
              name: web
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: script-vol
              mountPath: /mnt/locust
      volumes:
        - name: script-vol
          configMap:
            name: burstops-locust-cm
---
apiVersion: v1
kind: Service
metadata:
  name: burstops-locust
  namespace: burstops-system
  labels:
    app: burstops-locust
spec:
  type: ClusterIP
  ports:
    - port: 8089
      targetPort: 8089
      name: web
  selector:
    app: burstops-locust
