k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: burstops-gateway-ingress
  namespace: burstops-system
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /locust
            pathType: Prefix
            backend:
              service:
                name: burstops-locust
                port:
                  number: 8089
          - path: /
            pathType: Prefix
            backend:
              service:
                name: burstops-gateway
                port:
                  number: 8080
